# aex

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  setup.cfg
.github/workflows/: tests.yml
aex/: __init__.py  predictive.py  prior.py  sample.py
tests/: test_predictive.py  test_prior.py  test_sample.py
